2003-12-17  Jon A. Cruz <jon@joncruz.org>

	* Converted color selectors to C++ classes.

2003-12-18  Nathan Hurst <njh@csse.monash.edu.au>

	* Merged NRPointF and D, similarly Matrix and Rect.

2003-12-18  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/toolbox.cpp: re-added spiral button (reverting MenTaLguY's change).

2003-12-17  bulia byak <bulia@dr.com>

	* src/xml/repr-io.cpp src/xml/repr.h: fix to suppress formatting whitespace when
	serializing text and its children

	* src/select-context.cpp: shift now prevents dragging objects, creating rubberband
	instead

2003-12-17 Nathan Hurst <njh@csse.monash.edu.au>

	* provided some initial thoughts on how to do Points uniformly across inkscape.  geom.h
	* partial currying of zoom menu
	
2003-12-17  MenTaLguY <mental@rydia.net>

	* src/toolbox.cpp: removed spiral button

2003-12-16  bulia byak <bulia@dr.com>

	* src/nodepath.cpp src/nodepath.h: node drag is now restricted to hor/vert by ctrl

2003-12-16  bulia byak <bulia@dr.com>

	* src/seltrans.cpp: fix for 860201; ctrl restricts rotation by 15 degrees (from
	sodipodi); used new status display function

	* src/sp-text.cpp: removed non-printable char error into text-context, removed
	extraneous assignment

	* src/verbs.cpp: typo fix

	* src/knot.cpp: in cancelling drag, use the knot's desktop instead of active; add
	statusbar flash

	* src/draw-context.cpp: changing useful messages to statusf_flash, removing useless
	debug output

	* src/nodepath.cpp: statusbar error message if joining nodes fails; expanded
	update_statusbar
 
	* src/select-context.cpp: statusbar flash when esc cancels selection or drag

	* src/selection.cpp: expanded update_statusbar

	* src/text-context.cpp: used statusf_flash for no-break space, added non-printable
	char error

	* src/tools-switch.cpp: added default statusbar message for each tool

	* src/desktop.cpp: new handler for status_set, with timeout; initialize message in
	statusbar
